commit for amir reza

--- a/index.html
+++ b/index.html
@@ -6,6 +6,31 @@
     <title>Document</title>
 </head>
 <body>
-    hi amir reza
+
+        <button onclick="amirReza('red')">
+            قرمز کن
+        </button>
+        <button onclick="amirReza('blue')">
+            ابی کن
+        </button>
+
+        <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Non inventore officiis, asperiores quidem rerum aspernatur obcaecati, facere exercitationem quasi voluptas quibusdam, culpa ratione amet sed voluptatem repellendus ad modi quaerat?
+        </p>
+
+
+    <script>
+
+        // function name (){
+
+        // }
+        // ()=>{}
+            var p = document.querySelector('p') 
+        
+        function amirReza(color) {
+            p.style.backgroundColor = color
+        }
+
+    </script>
 </body>
 </html>
